fix scrollbar

--- a/style-mangabox-main.css
+++ b/style-mangabox-main.css
@@ -2748,6 +2748,7 @@ body.offline #stickyContainer {
 	opacity: 0;
 	transition: opacity 0.3s ease;
 	pointer-events: none;
+	z-index:951;
 }
 
 .scrollbox-scrollbar.visible {
